--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
+    "ajv": "^6.10.0",
+    "class-transformer": "^0.2.2",
+    "class-validator": "^0.9.1",
     "json-schema-faker": "^0.5.0-rc16",
     "mongodb": "^3.2.3",
     "passport": "^0.4.0",
